<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.njit.arp226.uservalidationandroidapp.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_textview"
                tools:text="@string/name_textview" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name_hint"
                tools:text="@string/name_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age_textview"
                tools:text="@string/age_textview" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"
                android:ems="10"
                android:inputType="number"
                android:text="@string/age_hint"
                tools:text="@string/age_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sales_textview"
                tools:text="@string/sales_textview" />

            <EditText
                android:id="@+id/etSales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/sales_hint"
                tools:text="@string/sales_hint" />

        </LinearLayout>

        <Button
            android:id="@+id/bValidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate_button"
            tools:text="@string/validate_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
